# sufc_scraper

./: .gitignore  README.md  SUMMARY.md  export_excel.py  main.py  pyproject.toml
models/: match.py
scrapers/: __init__.py  base.py  eleven_v_eleven.py  football_data.py  statto.py  transfermarkt.py
storage/: database.py
utils/: __init__.py  http_client.py  season_utils.py
