[project]
name = "sufc-history"
version = "0.1.0"
description = "Historical match data scraper for Southend United FC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "openpyxl>=3.1",
]

[project.scripts]
sufc-history = "main:main"
